--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,8 +8,12 @@ body{
     background-position: center;
 }
 
+.scoreboard-row{
+    margin-left: 90px;
+}
+
 h1{
-    font-size: 47px;
+    font-size: 42px;
     color: white;
     font-family: 'Montserrat', sans-serif;
     display: inline;
@@ -19,8 +23,7 @@ h1{
 h2{
    font-size: 36px;
     font-family: 'Montserrat', sans-serif;
-    display: inline;
-    
+    display: inline;  
 }
 
 p{
@@ -35,22 +38,19 @@ p{
     text-align: right;
 }
 
-
-
 img{
-    border: red 5px solid;
+    border: red 4px solid;
     border-radius: 25px;
     cursor: pointer;
     height: 210px;
     width: 155px;
     margin: 10px;
-    transition: all 0.2s ease-in-out;
-   
+    transition: all 0.2s ease-in-out;    
 }
 
 .picture-row{
 margin-top: 40px;
-
+margin-left: 45px;
 }
 
 img:hover{ 
@@ -58,13 +58,36 @@ img:hover{
 }
 
 .footer{
-    background-color: red;
+    /* background-color: red; */
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 50px;
+    height: 70px;
     width: 100%;
     overflow: hidden;
+    padding: 5px;
+}
+
+button{
+    border-radius: 35px;
+    width: 225px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    background-color: white;
+    opacity: 0.7;
+    margin-top: 8px;
+    margin-left: 100px;
+    cursor: pointer;
+    outline: 'none';
+    border: 'none';
+}
+
+#yellow-card{
+    background-color: yellow;
+}
+
+#red-card{
+    background-color: red;
 }
 
 .modal{
