--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,7 +21,7 @@ h1{
 }
 
 h2{
-   font-size: 36px;
+   font-size: 38px;
     font-family: 'Montserrat', sans-serif;
     display: inline;  
 }
@@ -34,8 +34,10 @@ p{
 
 .close{
     font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    text-align: right;
+    font-size: 20px;
+    /* text-align: right; */
+    margin-left: 1050px;
+    margin-top: 20px;
 }
 
 img{
@@ -101,6 +103,7 @@ button{
     overflow: auto;
     background-color: rgb(0,0,0);
     background: rgb(0,0,0,0.4);
+    
 }
 
 .modal-content{
