--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -67,13 +67,14 @@ img:hover{
     width: 100%;
     overflow: hidden;
     padding: 5px;
+    margin-bottom: 10px;
 }
 
 button{
     border-radius: 35px;
     width: 225px;
     font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     background-color: white;
     opacity: 0.7;
     margin-top: 8px;
