clicks-design-work

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -159,12 +159,11 @@ button{
 
 .clicks-box{
     color: whitesmoke;
-    height: 55px;
-    width: 80px;
-    padding: 10px;
-    font-size: 20px;
+    /* width: 60px; */
+    margin-top: 20px;
+    margin-right: 150px;
+    font-size: 44px;
     font-family: 'Montserrat', sans-serif;
-    background-color: gray;
     text-align: center;
     
 }
